--- a/styles/architect.css
+++ b/styles/architect.css
@@ -7,6 +7,14 @@
    font-family: 'Work Sans', sans-serif;
 }
 .btn-primary{
+    border-radius: 8px;
+    color: #FFF;
+    background: #FF900E;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    cursor: pointer;
+    font-weight: 600;
+    border: 0;
 
 }
 
@@ -53,4 +61,26 @@ nav li a{
 }
 .banner-description{
     color:  #727272;
+}
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+/* responsive styles */
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
+@media screen and (min-width:576px) and (max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
 }
