--- a/styles/architect.css
+++ b/styles/architect.css
@@ -17,6 +17,9 @@
     border: 0;
 
 }
+.text-light-gray{
+    color:  #727272;
+}
 
 /* header styles */
 header{
@@ -59,35 +62,15 @@ nav li a{
     font-weight: 700;
     color: #131313;
 }
-.banner-description{
-    color:  #727272;
-}
+
 .banner img{
     margin-top: 20px;
     width: 100%;
 }
 
-/* responsive styles */
-@media screen and (max-width:576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-}
-@media screen and (min-width:576px) and (max-width:960px) {
-    header{
-        padding: 50px;
-    }
-    nav{
-        flex-direction: column;
-    }
-}
-
 main{
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 .teams-container{
     display: flex;
@@ -112,4 +95,34 @@ main{
 .teams-title .text-features{
     color: #FF900E;
     font-weight: 700;
+}
+
+
+
+
+/* responsive styles */
+@media screen and (max-width:576px) {
+    header{
+        padding: 20px;
+    }
+    nav,
+    .teams-container{
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+@media screen and (min-width:576px) and (max-width:960px) {
+    header{
+        padding: 50px;
+    }
+    nav,
+    .teams-container{
+        flex-direction: column;
+    }
 }
