--- a/styles/architect.css
+++ b/styles/architect.css
@@ -121,6 +121,17 @@ main{
     font-size: 1.25rem;
     margin-top: 5px;
 }
+/* sponsor section */
+.sponsors{
+    text-align: center;
+}
+.sponsors-img-container{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
 
 
 
@@ -131,23 +142,33 @@ main{
         padding: 20px;
     }
     nav,
-    .teams-container{
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container{
         flex-direction: column;
+    }
+    .sponsors-img-container img{
+          width: 165px;
     }
     .teams-img-container{
         grid-template-columns: 1fr;
     }
-    .teams-content{
+    .teams-content .facts-card-container{
         padding-left: 20px;
         padding-right: 20px;
     }
+    .facts-card-container{
+        gap: 20px;
+    }
 }
+
 @media screen and (min-width:576px) and (max-width:960px) {
     header{
         padding: 50px;
     }
     nav,
-    .teams-container{
+    .teams-container,
+    .sponsors-img-container{
         flex-direction: column;
     }
 }
