--- a/styles/architect.css
+++ b/styles/architect.css
@@ -110,6 +110,10 @@ main{
     padding: 30px;
     margin-bottom: 20px;
 }
+.feature-img img{
+    height: 90%;
+    margin-left: 50px;
+}
 .features .section-title{
     border-left: 5px solid #FF900E;
     padding-left: 20px;
@@ -120,9 +124,16 @@ main{
     color: #FFF;
     width: 342px;
     padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
 }
 .ten-years-badge h2{
     font-size: 4rem;
+    margin: 0;
+}
+.ten-years-badge p{
+    font-size: 1.5rem;
 }
   
 /* facts section */
@@ -171,9 +182,19 @@ main{
     }
     nav,
     .teams-container,
+    .features,
     .facts-card-container,
     .sponsors-img-container{
         flex-direction: column;
+    }
+    .feature-img img{
+        width: 90%;
+        margin-left:0;
+    }
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
+        
     }
     .sponsors-img-container img{
           width: 165px;
@@ -188,6 +209,7 @@ main{
     .facts-card-container{
         gap: 20px;
     }
+    
 }
 
 @media screen and (min-width:576px) and (max-width:960px) {
@@ -196,6 +218,7 @@ main{
     }
     nav,
     .teams-container,
+    .features,
     .sponsors-img-container{
         flex-direction: column;
     }
